# libre-graph-api-cpp-qt-client

./: .gitignore  CMakeLists.txt  README.md
.openapi-generator/: FILES
client/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Config.cmake.in  LibreGraphAPIConfig.cmake  OAIActivitiesApi.cpp  OAIAppRole.cpp  OAIAppRole.h  OAIAppRoleAssignment.cpp  OAIAppRoleAssignment.h  OAIApplication.cpp  OAIApplication.h  OAIApplicationsApi.cpp  OAIApplicationsApi.h  OAIBaseItem.cpp  OAIBaseItem.h  OAIBaseItemInline.cpp  OAIBaseItemInline.h  OAIBaseItem_allOf.cpp  OAIBaseItem_allOf.h  OAIClass_Member_Reference.cpp  OAIClass_Member_Reference.h  OAIClass_Reference.cpp  OAIClass_Reference.h  OAIClass_Teacher_Reference.cpp  OAIClass_Teacher_Reference.h  OAICollection_of_appRoleAssignments.cpp  OAICollection_of_appRoleAssignments.h  OAICollection_of_applications.cpp  OAICollection_of_applications.h  OAICollection_of_class.cpp  OAICollection_of_class.h  OAICollection_of_drive.cpp  OAICollection_of_drive.h  OAICollection_of_driveItems.cpp  OAICollection_of_driveItems.h  OAICollection_of_drives.cpp  OAICollection_of_drives.h  OAICollection_of_drives_1.cpp  (+180 more)
client/client_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
client/client_autogen/EWIEGA46WW/: moc_OAIApplicationsApi.cpp  moc_OAIApplicationsApi.cpp.d  moc_OAIDefaultApi.cpp  moc_OAIDefaultApi.cpp.d  moc_OAIDrivesApi.cpp  moc_OAIDrivesApi.cpp.d  moc_OAIDrivesGetDrivesApi.cpp  moc_OAIDrivesGetDrivesApi.cpp.d  moc_OAIDrivesRootApi.cpp  moc_OAIDrivesRootApi.cpp.d  moc_OAIEducationClassApi.cpp  moc_OAIEducationClassApi.cpp.d  moc_OAIEducationClassTeachersApi.cpp  moc_OAIEducationClassTeachersApi.cpp.d  moc_OAIEducationSchoolApi.cpp  moc_OAIEducationSchoolApi.cpp.d  moc_OAIEducationUserApi.cpp  moc_OAIEducationUserApi.cpp.d  moc_OAIGroupApi.cpp  moc_OAIGroupApi.cpp.d  moc_OAIGroupsApi.cpp  moc_OAIGroupsApi.cpp.d  moc_OAIHttpRequest.cpp  moc_OAIHttpRequest.cpp.d  moc_OAIMeChangepasswordApi.cpp  moc_OAIMeChangepasswordApi.cpp.d  moc_OAIMeDriveApi.cpp  moc_OAIMeDriveApi.cpp.d  moc_OAIMeDriveRootApi.cpp  moc_OAIMeDriveRootApi.cpp.d  moc_OAIMeDriveRootChildrenApi.cpp  moc_OAIMeDriveRootChildrenApi.cpp.d  moc_OAIMeDrivesApi.cpp  moc_OAIMeDrivesApi.cpp.d  moc_OAIMeUserApi.cpp  moc_OAIMeUserApi.cpp.d  moc_OAIOauth.cpp  moc_OAIOauth.cpp.d  moc_OAITagsApi.cpp  moc_OAITagsApi.cpp.d  (+6 more)
